# expert-drilling-ai

./: package-lock.json  package.json
.github/workflows/: desktop-release.yml
desktop/: BUILD_INSTRUCTIONS_RU.md  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
lib/: calculations.ts  cement-program.ts  local-database.ts  project.ts  well.ts
offline/: app.ts  index.html  style.css
scripts/: build-desktop-source.mjs  build-offline.mjs  verify-offline-bundle.mjs
tests/: calculations.test.ts
