[package]
name = "expert-drilling-ai"
version = "0.2.0"
description = "Автономный инженерный калькулятор по бурению"
authors = ["Expert Drilling AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
